# market_simulation

./: .gitignore  README.md  pyproject.toml
market_simulation/: run_simulation.py
market_simulation/data/: data_loader.py  schemas.py
market_simulation/data/sample_data/: cleaners.csv  postal_codes.csv
market_simulation/models/: cleaner.py  geo.py  market.py
market_simulation/simulation/: config.py  metrics.py  results.py  runner.py  simulation_engine.py  simulator.py
market_simulation/simulation_results/: config.json  market_map.html  search_results.csv  summary_stats.json
market_simulation/utils/: geo_utils.py
market_simulation/visualization/: visualizer.py
tests/test_data/: test_data_loader.py  test_schemas.py
tests/test_models/: test_cleaner.py  test_geo.py  test_market.py
tests/test_simulation/: test_config.py  test_metrics.py  test_results.py  test_runner.py  test_simulation_engine.py  test_simulator.py
tests/test_utils/: test_geo_utils.py
tests/test_visualization/: test_visualizer.py
