[project]
name = "market_simulation"
version = "0.1.0"
description = ""
authors = [
    {name = "arun-ravishankar-turno",email = "arun.ravishankar@turno.com"}
]
readme = "README.md"
packages = [
    { include = "market_simulation" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.10.5,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "jupyterlab (>=4.3.4,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "black (>=24.10.0,<25.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "mypy (>=1.14.1,<2.0.0)",
    "isort (>=5.13.2,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
